--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "description": "",
   "author": "",
   "license": "MIT",
-  "homepage": "https://github.com/antfu/pkg-name#readme",
+  "homepage": "https://github.com/author/pkg-name#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/pkg-name.git"
+    "url": "git+https://github.com/author/pkg-name.git"
   },
-  "bugs": "https://github.com/antfu/pkg-name/issues",
+  "bugs": "https://github.com/author/pkg-name/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
