--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@2
+      - uses: pnpm/action-setup@v2
       - name: Set node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
